getproperty by id
